--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -8,12 +8,18 @@ cmake_minimum_required(VERSION 3.4.1)
 include_directories(
         ${CMAKE_SOURCE_DIR}/include/
         ${CMAKE_SOURCE_DIR}/
-        D:/zzzzzzz/ffmpeg-h/ffmpeg-422
+#        ${CMAKE_SOURCE_DIR}/ffprobe/
+        ${CMAKE_SOURCE_DIR}/ffmpeg/
+        D:/technology/ffmpeg-422
 )
 #定义全局 my_source_path 变量
-file(GLOB my_source_path
-        ${CMAKE_SOURCE_DIR}/*.cpp
-        ${CMAKE_SOURCE_DIR}/*.c
+file(GLOB my_source_ffmpeg
+        ${CMAKE_SOURCE_DIR}/ffmpeg/*.cpp
+        ${CMAKE_SOURCE_DIR}/ffmpeg/*.c
+        )
+file(GLOB my_source_ffprobe
+        ${CMAKE_SOURCE_DIR}/ffprobe/*.c
+        ${CMAKE_SOURCE_DIR}/ffprobe/*.cpp
         )
 # Creates and names a library, sets it as either STATICw
 # or SHARED, and provides the relative paths to its source code.
@@ -21,11 +27,18 @@ file(GLOB my_source_path
 # Gradle automatically packages shared libraries with your APK.
 
 add_library( # Sets the name of the library.
-        native-lib
+        native-ffmpeg
         # Sets the library as a shared library.
         SHARED
         # Provides a relative path to your source file(s).
-        ${my_source_path})
+        ${my_source_ffmpeg})
+
+#[[add_library( # Sets the name of the library.
+        native-ffprobe
+        # Sets the library as a shared library.
+        SHARED
+        # Provides a relative path to your source file(s).
+        ${my_source_ffprobe})]]
 
 add_library(avcodec SHARED IMPORTED)
 add_library(avdevice SHARED IMPORTED)
@@ -34,7 +47,7 @@ add_library(avformat SHARED IMPORTED)
 add_library(avutil SHARED IMPORTED)
 add_library(swresample SHARED IMPORTED)
 add_library(swscale SHARED IMPORTED)
-#add_library(postproc SHARED IMPORTED)
+add_library(postproc SHARED IMPORTED)
 
 set_target_properties(avcodec PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libavcodec.so)
 set_target_properties(avdevice PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libavdevice.so)
@@ -43,7 +56,7 @@ set_target_properties(avformat PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/
 set_target_properties(avutil PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libavutil.so)
 set_target_properties(swresample PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libswresample.so)
 set_target_properties(swscale PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libswscale.so)
-#set_target_properties(postproc PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libpostproc.so)
+set_target_properties(postproc PROPERTIES IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/../jniLibs/${ANDROID_ABI}/libpostproc.so)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -63,7 +76,8 @@ find_library( # Sets the name of the path variable.
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-        native-lib
+        native-ffmpeg
+#        native-ffprobe
         avcodec
         avdevice
         avfilter
@@ -71,7 +85,7 @@ target_link_libraries( # Specifies the target library.
         avutil
         swresample
         swscale
-#        postproc
+        postproc
         # Links the target library to the log library
         # included in the NDK.
         ${log-lib})
