--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -10,7 +10,7 @@ include_directories(
         ${CMAKE_SOURCE_DIR}/
 #        ${CMAKE_SOURCE_DIR}/ffprobe/
         ${CMAKE_SOURCE_DIR}/ffmpeg/
-        D:/technology/ffmpeg-422
+#        D:/technology/ffmpeg-422
 )
 #定义全局 my_source_path 变量
 file(GLOB my_source_ffmpeg
