--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,13 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        /*externalNativeBuild {
+/*        externalNativeBuild {
             cmake {
                 cppFlags "-std=c++11"
             }
         }*/
         ndk {
-//            abiFilters "armeabi-v7a"
+            abiFilters "armeabi-v7a"
         }
     }
     buildTypes {
