--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
+    ndkVersion "21.1.6352462"
     compileSdkVersion 29
-    buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "cn.krisez.vvv"
         minSdkVersion 16
@@ -10,11 +10,11 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-/*        externalNativeBuild {
+        externalNativeBuild {
             cmake {
-                cppFlags "-std=c++11"
+                cppFlags " -Wall -O2 -U_FORTIFY_SOURCE -fstack-protector-all"
             }
-        }*/
+        }
         ndk {
             abiFilters "armeabi-v7a","arm64-v8a"
         }
